...
      </View>
    ),
    [],
  );

  return (
    <SettingsScrollView testID="SettingsRoot">
      <SettingsSection>
        <SettingsListItem
          title={loc.settings.donate}
          subtitle={loc.settings.donate_description}
          subtitleNumberOfLines={0}
          leftAvatar={donateIcon}
...
          testID="SecurityButton"
          chevron
        />
        <SettingsListItem
          title={loc.settings.network}
          iconName="network"
          onPress={() => navigate('NetworkSettings')}
          testID="NetworkSettings"
          chevron
          bottomDivider={false}
        />
      </SettingsSection>

...
